<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity"
    android:background="#C3D7E6">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/high_score"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/high_score_text_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <ImageButton
        android:id="@+id/main_playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/image_button_play"
        android:background="@drawable/play_button"
        android:onClick="onClick"/>

    <TextView
        android:id="@+id/main_text_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/main_playButton"
        android:layout_marginTop="5dp"
        android:text="@string/play"
        android:textSize="34sp"/>
    <Button
        android:id="@+id/main_authorizationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/authorize"
        android:layout_below="@+id/main_text_play"
        android:layout_marginTop="30dp"
        android:onClick="onClick"/>
    </LinearLayout>

</LinearLayout>