<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/another"

    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".GameOverActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restart"
            android:id="@+id/restart_button"
            android:onClick="restart"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:onClick="go_to_menu"/>
    </LinearLayout>
    <TextView
        android:id="@+id/game_over_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:text="@string/game_over"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:textColor="#1B2C4D"
        android:text="@string/score"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        >

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:layout_centerInParent="true"
            android:alpha="0.6"
            android:background="@drawable/circle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:id="@+id/score"
            android:layout_marginTop="10dp"
            android:textSize="100sp"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            />

    </RelativeLayout>







    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>




</LinearLayout>